--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,5 +1,9 @@
 @import '@fontsource/fira-mono';
 
+* {
+	box-sizing: border-box;
+}
+
 :root {
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
