--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -8,15 +8,20 @@
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
+	--color-bg-light: white;
+	--color-bg-dark: gray;
 	--color-bg-0: rgb(202, 216, 228);
 	--color-bg-1: hsl(209, 36%, 86%);
 	--color-bg-2: hsl(224, 44%, 95%);
 	--color-theme-1: #ff3e00;
 	--color-theme-2: #4075a6;
-	--color-text: rgba(0, 0, 0, 0.7);
+	--color-text: #323336;
+	--color-accent: #ff3e00;
+	--color-accent-subtle: #e9ecef;
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
+	font-size: 22px;
 	color: var(--color-text);
 }
 
@@ -73,19 +78,33 @@ pre {
 	color: var(--color-text);
 }
 
-.text-column {
-	display: flex;
-	max-width: 48rem;
-	flex: 0.2;
-	flex-direction: column;
-	justify-content: center;
-	margin: 0 auto;
-}
-
 input,
 button {
 	font-size: inherit;
 	font-family: inherit;
+	padding: 0;
+	margin: 0;
+}
+
+input {
+	display: inline-block;
+	border: var(--color-accent-subtle) 1px solid;
+	border-radius: 3px;
+	padding: 0.5em 1em;
+	background-color: var(--color-bg-light);
+	margin: 0;
+}
+
+input:focus-visible {
+	outline: var(--color-accent) solid 1px;
+	outline: -webkit-focus-ring-color solid 1px;
+}
+
+@supports not selector(:focus-visible) {
+	input:focus {
+		outline: var(--color-accent) solid 1px;
+		outline: -webkit-focus-ring-color solid 1px;
+	}
 }
 
 button:focus:not(:focus-visible) {
