--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -8,35 +8,35 @@
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--color-bg-light: white;
+	--color-bg-light: rgb(250, 250, 250);
 	--color-bg-dark: gray;
 	--color-bg-0: rgb(202, 216, 228);
-	--color-bg-1: hsl(209, 36%, 86%);
-	--color-bg-2: hsl(224, 44%, 95%);
-	--color-theme-1: #ff3e00;
+	--color-bg-1: #f4f4ed;
+	--color-bg-2: #d3d3ba;
+	--color-theme-1: #a348e9;
 	--color-theme-2: #4075a6;
 	--color-text: #323336;
-	--color-accent: #ff3e00;
+	--color-accent: #a348e9;
 	--color-accent-subtle: #e9ecef;
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
-	font-size: 22px;
+	font-size: 16px;
 	color: var(--color-text);
+}
+
+@media (min-width: 720px) {
+	:root {
+		font-size: 22px;
+	}
 }
 
 body {
 	min-height: 100vh;
 	margin: 0;
 	background-attachment: fixed;
-	background-color: var(--color-bg-1);
+	background-color: var(--color-bg-light);
 	background-size: 100vw 100vh;
-	background-image: radial-gradient(
-			50% 50% at 50% 50%,
-			rgba(255, 255, 255, 0.75) 0%,
-			rgba(255, 255, 255, 0) 100%
-		),
-		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
 }
 
 h1,
@@ -91,7 +91,6 @@ input {
 	border: var(--color-accent-subtle) 1px solid;
 	border-radius: 3px;
 	padding: 0.5em 1em;
-	background-color: var(--color-bg-light);
 	margin: 0;
 }
 
