Shop Page Updates
  - move shop page to root route
  - add date-fns dependency
  - break out some UI components
  - add current signed in memebers table
  - some css cleanup
  - cleanup service types
  - add new `.findTodays()` method to visits service

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -34,7 +34,6 @@
 body {
 	min-height: 100vh;
 	margin: 0;
-	background-attachment: fixed;
 	background-color: var(--color-bg-light);
 	background-size: 100vw 100vh;
 }
@@ -45,7 +44,8 @@ p {
 	font-weight: 400;
 }
 
-p {
+p,
+label {
 	line-height: 1.5;
 }
 
@@ -108,6 +108,27 @@ input:focus-visible {
 
 button:focus:not(:focus-visible) {
 	outline: none;
+}
+
+table {
+	border-collapse: collapse;
+	width: 100%;
+	font-size: 0.8em;
+}
+
+th,
+td {
+	border: 1px solid var(--color-bg-0);
+	padding: 0.5em;
+}
+
+th {
+	background-color: var(--color-bg-1);
+	text-align: left;
+}
+
+td {
+	background-color: var(--color-bg-light);
 }
 
 @media (min-width: 720px) {
