use dvh units for better iPad experience

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,10 +53,10 @@
 }
 
 body {
-	min-height: 100vh;
+	min-height: 100dvh;
 	margin: 0;
 	background-color: var(--color-bg-light);
-	background-size: 100vw 100vh;
+	background-size: 100dvw 100dvh;
 }
 
 h1,
