--- a/src/shop_theme.css
+++ b/src/shop_theme.css
@@ -1,6 +1,8 @@
 @import '@fontsource/fira-mono';
 
 :root {
+	/* logoUrl is set in shop_config.js file */
+
 	/* font and text */
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
