--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,8 @@
 	--color-bg-med: rgb(132, 165, 197);
 	--color-bg-dark: rgb(36, 46, 66);
 	--border-radius: 6px;
+	--shop-button-height: 50px;
+	--admin-button-height: 44px;
 
 	font-size: var(--font-size);
 	font-family: var(--font-body);
@@ -161,7 +163,7 @@ button {
 	border-radius: var(--border-radius, 6px);
 	padding: 0 1rem;
 	margin: auto 0.2rem;
-	min-height: 50px;
+	min-height: var(--shop-button-height);
 	text-shadow: 0 1px 0 var(--color-bg-dark);
 	border: 0 solid transparent;
 	outline-color: var(--color-accent);
